gigante-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: open-shift-ml-online-git
  name: open-shift-ml-online-git
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: open-shift-ml-online-git
