gigante-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: open-shift-ml-online-git
  name: open-shift-ml-online-git
  namespace: gigante-sandbox
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: open-shift-ml-online-git
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
